--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <p class="section-desc">科技与医疗的完美结合</p>
         
         <div class="bilibili-video-container">
-            <iframe src="https://player.bilibili.com/player.html?isOutside=true&aid=435483046&bvid=BV1b3411d7cX&cid=968409521&page=1&autoplay=0" 
+            <iframe src="https://player.bilibili.com/player.html?isOutside=true&aid=114653866758702&bvid=BV1KFTizyEyT&cid=30409295074&p=1&autoplay=0" 
                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"> 
             </iframe>
         </div>
